<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智选家电</string>
    <string name="home">首页</string>
    <string name="market">商城</string>
    <string name="groupon">团购</string>
    <string name="mine">我的</string>
    <string name="net_location_title">网络定位</string>
    <string name="gps_location_title">GPS定位</string>
    <string name="location_latlng">"坐      标："</string>
    <string name="location_accurancy">"精      度："</string>
    <string name="location_method">定位方式：</string>
    <string name="location_time">定位时间：</string>
    <string name="gpsfollow">追随</string>
    <string name="gpslocate">定位</string>
    <string name="gpsrotate">旋转</string>
    <string name="location_description">位置描述：</string>
    <string name="location_province">"   省   ：   "</string>
    <string name="location_city">"   市   ：   "</string>
    <string name="location_county">"   区   ：   "</string>
    <string name="location_city_code">城市编码：</string>
    <string name="location_area_code">区域编码：</string>
    <string name="daily_elec">生活电器</string>
    <string name="kitchen_elec">厨房电器</string>
    <string name="personal_health">个人健康</string>
    <string name="useful_tool">五金家装</string>
    <string name="mobile_comm">手机通讯</string>
    <string name="mobile_accessory">手机配件</string>
    <string name="digit_accessory">数码配件</string>
    <string name="intellect_device">智能设备</string>
    <string name="computer">电脑整机</string>
    <string name="computer_accessory">电脑配件</string>
    <string name="network_device">网络产品</string>
    <string name="office_printer">办公打印</string>
    <string name="capture_head_title">扫一扫</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="personal_center">个人中心</string>
    <string name="login_register">登陆/注册</string>
    <string name="exit">退出</string>
    <string name="order">我的订单</string>
    <string name="cart">我的购物车</string>
    <string name="mygroupon">我的优惠券</string>
    <string name="points">我的会员积分</string>
    <string name="favorite">我的收藏</string>
    <string name="account">我的账户</string>
    <string name="address">收货地址管理</string>
</resources>
